team pg created

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -204,6 +204,10 @@
 	display: none;
 }
 
+.creator .navBar_SunMoon{
+	display: none;
+}
+
 .backgroundOverlay {
     position: fixed;
     display: block;
