--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -21,6 +21,7 @@
     justify-content: flex-end;
     align-items: center;
     gap: 40px;
+	padding-right: 20px;
 }
 
 .navBar > .navLinks li > a {
