--- a/src/pages/creators/creators.css
+++ b/src/pages/creators/creators.css
@@ -6,6 +6,11 @@
     background-color: var(--light-sky-2);
 }
 
+.creator_landing{
+    height: 110vh;
+    
+}
+
 .creator_landing_cloud {
     width: 100vw;
 }
@@ -78,7 +83,7 @@
 
 .creator_landing_subhead{
     margin-top: 20px;
-    padding-top: 4px;
+    padding: 4px;
     font-weight: 400;
     font-size: 30px;
     line-height: 40px;
@@ -99,9 +104,12 @@
 
     .creator_landing{
         padding: 30px;
+        height: 90vh;
+    }
+    .creator_landing_cloud {
+       margin-top: -150px;
        
     }
-
 }
 
 
