--- a/src/pages/creators/creators.css
+++ b/src/pages/creators/creators.css
@@ -157,7 +157,7 @@
         font-size: 50px;
     }
     .creator_developers_inner{
-        padding: 30 30px;
+        padding: 30px 30px;
     }
     .creator_developers_content_ppl div .creator_developers_name{
         opacity: 1;
