--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -9,8 +9,8 @@
 	background-color: var(--eerie-black);
 	padding: 20px 40px;
 	display: flex;
-	max-width: 100dvw;
-	width: 100dvw;
+	max-width: 100vw;
+	width: 100vw;
 	justify-content: space-between;
 	align-items: center;
 }
