--- a/src/pages/team/components/teamleads2.css
+++ b/src/pages/team/components/teamleads2.css
@@ -47,6 +47,12 @@
         padding-bottom: 25px;
        
     }
+
+    .teamlead2{
+        display: flex;
+       flex-direction: column;   
+       padding: 30px;
+    }
     
     .teamlead2 div div {
         font-size: 24px;
@@ -61,7 +67,7 @@
     }
     
     .designlead1,.operationslead,.organizinglead{
-        width:390px
+        width:330px
     }
     
     
