--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -7,7 +7,7 @@
 	display: flex;
 	flex-direction: row;
 	background-color: #FFF8E1;
-	padding:2% 9% ;
+	padding:2% 4% ;
 	align-items: center;
     justify-content: space-between;
 }
@@ -47,7 +47,7 @@
 }
 
 .home_footer_two{
-	background: linear-gradient(0deg, #1A1A1A, #1A1A1A);
+	background: linear-gradient(0deg, black, black);
     color:white;
      padding: 4%;
 	display: flex;
@@ -63,11 +63,11 @@
 .home_footer_two_right{
     display: flex;
     flex-direction: row;
-    line-height: 23px;
+    line-height: 33px;
 }
 
 .home_footer_two_right div p{
-	font-size: 12px;
+	font-size: 15px;
 }
 
 
@@ -78,6 +78,10 @@
 	z-index: 2;
 	bottom: 0%;
 	height: 100%;
+}
+
+.home_footer_image{
+	background-color: black;
 }
 
 .home_footer_img > img {
