--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -6,8 +6,8 @@
 
 #navbar-joinus {
 	padding: 10px 20px;
-	font-size: 20px;
-	font-weight: 400;
+	font-size: min(90% ,20px);
+    font-weight: 400;
 }
 
 .navBar {
@@ -96,7 +96,7 @@
 .navBar > .navLinks li {
     cursor: pointer;
     font-weight: 400;
-    font-size: 20px;
+    font-size: min(90% ,20px);;
     line-height: 36px;
     /* identical to box height */
     color: #FFFFFF;
@@ -210,6 +210,8 @@
 
 .navBar_SunMoon {
 	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
 	top: 35px;
 	z-index: -1;
 }
