fix: balloon responsive fix

--- a/src/pages/events/Events.css
+++ b/src/pages/events/Events.css
@@ -209,3 +209,13 @@
             font-size: 10px;
         }
     }
+
+    @media (width <= 375px) {
+        .events_balloon {
+            display: none;
+        }
+
+        .events_searchbar{
+            height:40px;
+        }
+    }
