fix: quality of life fixes

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -135,6 +135,13 @@
     }
 }
 
+@media screen and (max-width: 480px) {
+	.navBar_SunMoon {
+		width: 200px;
+		height: 250px;
+	}
+}
+
 /* .navBar_links {
 	display: flex;
 	align-items: center;
