--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -32,7 +32,7 @@
 	border: 2px solid var(--eerie-black);
 	border-radius: 100%;
 	width: 50px;
-	height: 50px;
+	aspect-ratio: 1;
 	cursor: pointer;
 	transition: all 0.2s ease-in-out;
 }
