--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,516 +1,523 @@
 .home {
-	height: 100%;
-	margin-top: 90px;
-	overflow: hidden;
+  height: 100%;
+  margin-top: 90px;
+  overflow: hidden;
 }
 
-
-.theme-light .home_about, .theme-light .home_story {
-	background-color: var(--light-sky);
-	color: black;
+.theme-light .home_about,
+.theme-light .home_story {
+  background-color: var(--light-sky);
+  color: black;
 }
 
-.theme-dark .home_about, .theme-dark .home_story {
-	background-color: var(--eerie-black);
-	color: var(--cream);
+.theme-dark .home_about,
+.theme-dark .home_story {
+  background-color: var(--eerie-black);
+  color: var(--cream);
 }
 
-.theme-dark .home_landing, .theme-dark .home_earth {
-	background-color: var(--dark-sky);
-	color: var(--cream)	;
+.theme-dark .home_landing,
+.theme-dark .home_earth {
+  background-color: var(--dark-sky);
+  color: var(--cream);
 }
 
-.theme-light .home_earth, .theme-light .home_landing{
-	background-color: var(--light-sky-2);
-	color: black;
+.theme-light .home_earth,
+.theme-light .home_landing {
+  background-color: var(--light-sky-2);
+  color: black;
 }
 
-.home_landing, .home_earth {
-	position: relative;
-	transition: all 1s ease;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	border-bottom: 2px solid var(--eerie-black);
+.home_landing,
+.home_earth {
+  position: relative;
+  transition: all 1s ease;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 2px solid var(--eerie-black);
 }
 
 .theme-light .star {
-	display: none;
+  display: none;
 }
 
 .star {
-	fill: #FFF;
-	stroke-width: 2px;
-	stroke: rgba(66, 133, 244, 0.20);
+  fill: #fff;
+  stroke-width: 2px;
+  stroke: rgba(66, 133, 244, 0.2);
 }
 
-  @keyframes twinkle {
-	0% {
-	  transform: scale(1, 1), rotate(0);
-	  background: rgba(255,255,255,0.0);
-	  animation-timing-function: ease-in;
-	}
-	60% {
-	  transform: scale(0.4, 0.4);
-	  animation-timing-function: ease-out;
-	}
-	80% {
-	  transform: scale(1, 1);
-	}
-	100% {
-	  transform: scale(1, 1), rotate(360deg);
-	}
+@keyframes twinkle {
+  0% {
+    transform: scale(1, 1), rotate(0);
+    background: rgba(255, 255, 255, 0);
+    animation-timing-function: ease-in;
   }
-
-.theme-dark .home_landing, .theme-dark .home_story {
-	border-bottom: 2px solid var(--cream);
+  60% {
+    transform: scale(0.4, 0.4);
+    animation-timing-function: ease-out;
+  }
+  80% {
+    transform: scale(1, 1);
+  }
+  100% {
+    transform: scale(1, 1), rotate(360deg);
+  }
 }
 
-.theme-light .home_landing, .theme-light .home_story {
-	border-bottom: 2px solid var(--eerie-black);
-} 
+.theme-dark .home_landing,
+.theme-dark .home_story {
+  border-bottom: 2px solid var(--cream);
+}
 
+.theme-light .home_landing,
+.theme-light .home_story {
+  border-bottom: 2px solid var(--eerie-black);
+}
 
 .home_landing {
-	height: max(100vh, 500px);
+  height: max(100dvh, 500px);
 }
 
 .home_landing_head {
-	display: grid;
-	width: 100%;
-	justify-content: center;
-	align-items: center;
+  display: grid;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 .home_landing_head > h1 {
-	display: flex;
-	align-items: center;
-	font-size: clamp(2em, 15vw, 90px);
-	line-height: 101%;
-	gap: 20px;
-	width: 100%;
-	z-index: 2;
+  display: flex;
+  align-items: center;
+  font-size: clamp(2em, 15vw, 90px);
+  line-height: 101%;
+  gap: 20px;
+  width: 100%;
+  z-index: 2;
 }
 
 .home_landing_head > h1 > img {
-	width: 200px;
-	z-index: 2;
+  width: 200px;
+  z-index: 2;
 }
 
 @media (max-width: 720px) {
-	.home_landing_head {
-		width: 100%;
-	}
-	.home_landing_head > h1 {
-		display: inline;
-		text-align: center;
-	}
+  .home_landing_head {
+    width: 100%;
+  }
+  .home_landing_head > h1 {
+    display: inline;
+    text-align: center;
+  }
 
-	.home_landing_head > h1 > img {
-		display: none;
-	}
+  .home_landing_head > h1 > img {
+    display: none;
+  }
 }
 
 .home_landing > p {
-	margin-top: 30px;
-	margin-bottom: 30px;
-	font-size: 20px;
-	text-align: center;
-	width: 50%;
-	z-index: 2;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  font-size: 20px;
+  text-align: center;
+  width: 50%;
+  z-index: 2;
 }
 
 .home_landing_clouds {
-	transition: all 0.5s ease;
-	background-color: none;
-	position: absolute;
-	width: 100%;
-	height: 80vh;
-	bottom: 0;
+  transition: all 0.5s ease;
+  background-color: none;
+  position: absolute;
+  width: 100%;
+  height: 80dvh;
+  bottom: 0;
 }
 
 .home_landing_buttons {
-	display: flex;
-	flex-direction: row;
-	gap: 10px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
 }
 
 .home_landing_buttons > .FilledButton > button {
-	padding: 12% 2%;
-	width: 150px;
+  padding: 12% 2%;
+  width: 150px;
 }
 
-@media (max-width: 720px) {
-	.home_landing_buttons {
-		flex-direction: column;
-		gap: 10px;
+@media (max-width: 480px) {
+	.home_landing_buttons, .home_landing_buttons > .FilledButton > button {
+		width: 100%;
 	}
+} 
 
-	.home_landing > p {
-		width: 90%;
-	}
+@media (max-width: 720px) {
+  .home_landing_buttons {
+	padding: 5%;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .home_landing > p {
+    width: 90%;
+  }
 }
 
 .home_about {
-	height: max(100vh, 100%);
-	position: relative;
-	transition: all 1s ease;
-} 
+  height: max(100dvh, 100%);
+  position: relative;
+  transition: all 1s ease;
+}
 
 .home_marquee {
-	padding-top: 3%;
-	margin: 0%;
-	font-size: 60px;
-	color: transparent;
-	-webkit-text-stroke-width: 3px;
+  padding-top: 3%;
+  margin: 0%;
+  font-size: 60px;
+  color: transparent;
+  -webkit-text-stroke-width: 3px;
 }
 
 .home path {
-	transition: fill 1s ease;
+  transition: fill 1s ease;
 }
 
 .home mask {
-	transition: fill 1s ease;
+  transition: fill 1s ease;
 }
 
 .home rect {
-	transition: fill 1s ease;
+  transition: fill 1s ease;
 }
 
 .theme-light .marquee_span {
-	color: black;
+  color: black;
 }
 .theme-dark .marquee_span {
-	color: var(--cream);
+  color: var(--cream);
 }
 
 .home_about_inner {
-	display: flex;
-	align-items: center;
-	width: 100%;
-	height: 100%;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 .home_about_content {
-	display: flex;
-	width: 100%;
-	align-items: center;
-	flex-direction: column;
-	gap: 20px;
-	padding-bottom: 200px;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  padding-bottom: 200px;
 }
 .home_about_content > p {
-	padding: 0% 0% 0% 10%;
-	font-size: 20px;
+  padding: 0% 0% 0% 10%;
+  font-size: 20px;
 }
 
 .home_about_image {
-	width: 30%;
-	display: flex;
-	align-items: center;
-	flex-direction: column;
+  width: 30%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .llama_cloud {
-	position: absolute;
-	transform: translate(17px, 52px);
+  position: absolute;
+  transform: translate(17px, 52px);
 }
 
-.llama_body{
-	transform-origin: top;
-	position: relative;
+.llama_body {
+  transform-origin: top;
+  position: relative;
 }
 
-
- .home_about_clouds {
-	width: 100%;
-	position: absolute;
-	transform: scaleY(90%) translateY(6%);
-	bottom: 0%
+.home_about_clouds {
+  width: 100%;
+  position: absolute;
+  transform: scaleY(90%) translateY(6%);
+  bottom: 0%;
 }
 
 @media (max-width: 1100px) {
-	.home_landing_clouds {
-		height: 50vh;
-	}
+  .home_landing_clouds {
+    height: 50dvh;
+  }
 }
 
 @media (max-width: 720px) {
-	.home_landing_clouds {
-		height: 30vh;
-	}
-	.home_about_clouds {
-		height: 30vh;
-	}
-	.home_about_inner {
-		flex-direction: column-reverse;
-	}
+  .home_landing_clouds {
+    height: 30dvh;
+  }
+  .home_about_clouds {
+    height: 30dvh;
+  }
+  .home_about_inner {
+    flex-direction: column-reverse;
+  }
 
-	.home_about_content {
-		text-align: center;
-	}
+  .home_about_content {
+    text-align: center;
+  }
 
-	.home_about_content > p {
-		padding: 0;
-	}
+  .home_about_content > p {
+    padding: 0;
+  }
 
-	.home_about_image {
-		margin-top: -50px;
-		scale: 80%;
-		margin-bottom: -100px;
-	}
+  .home_about_image {
+    margin-top: -50px;
+    scale: 80%;
+    margin-bottom: -100px;
+  }
 }
 
 .theme-light .home_events {
-    background-color: white;
-    color: black;
-	transition: background-color 1s ease;
+  background-color: white;
+  color: black;
+  transition: background-color 1s ease;
 }
 
 .theme-dark .home_events {
-    background-color: #333333;;
-    color: white;
-	transition: background-color 1s ease;
+  background-color: #333333;
+  color: white;
+  transition: background-color 1s ease;
 }
 
-
-  
-
-.home_events{
-    padding:  8%;
+.home_events {
+  padding: 8%;
 }
 
-.home_events_head{
+.home_events_head {
   display: flex;
   flex-direction: row;
   align-items: center;
-justify-content: space-between;
+  justify-content: space-between;
 }
 
-.home_events h1{
-		font-size: 96px;
-		letter-spacing: -0.02em;
+.home_events h1 {
+  font-size: 96px;
+  letter-spacing: -0.02em;
 }
 
-.home_events_head > a{
-    color: black;
-	transition: all 0.1s ease-in-out ;
-} 
-
-.home_events_head > a:hover  {
-	font-weight: bold;
+.home_events_head > a {
+  color: black;
+  transition: all 0.1s ease-in-out;
 }
 
-
-.theme-dark .home_events a{
-    color: white;
+.home_events_head > a:hover {
+  font-weight: bold;
 }
 
-.home_events_list{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    position: relative;
-    margin-top: 12%;
-    overflow: hidden;
-	margin-bottom: 4%
+.theme-dark .home_events a {
+  color: white;
 }
 
-.home_events_list1, .home_events_list3{
-    margin-top: 16%;
+.home_events_list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  position: relative;
+  margin-top: 12%;
+  overflow: hidden;
+  margin-bottom: 4%;
 }
 
-.home_events_list1 > img, .home_events_list2 > img, .home_events_list3 > img {
-	width: 255px;
-	height: 255px;
+.home_events_list1,
+.home_events_list3 {
+  margin-top: 16%;
 }
 
+.home_events_list1 > img,
+.home_events_list2 > img,
+.home_events_list3 > img {
+  width: 230px;
+  height: 255px;
+}
 
-.home_events_list2 p{
-    width: 225.17px;    
+.home_events_list2 p {
+  width: 225.17px;
 }
 
 .home_events_readmore {
-	background-color: transparent;
-	cursor: pointer;
-    font-size: 16px;
-    font-weight: 600;
-    color: black;
+  background-color: transparent;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 600;
+  color: black;
 }
 
 .theme-dark .home_events_readmore {
-	color: var(--cream);
+  color: var(--cream);
 }
 
-.theme-light .home_events_list1 img,.theme-light .home_events_list2 img,.theme-light .home_events_list3 img{
-    border: black 2px solid;
-	-webkit-border-radius: 40px 40px 40px 40px;
+.theme-light .home_events_list1 img,
+.theme-light .home_events_list2 img,
+.theme-light .home_events_list3 img {
+  border: black 2px solid;
+  -webkit-border-radius: 40px 40px 40px 40px;
 
-    border-radius: 16px 16px 16px 16px ;
-	
+  border-radius: 16px 16px 16px 16px;
 }
 
-.theme-dark .home_events_list1 img,.theme-dark .home_events_list2 img,.theme-dark .home_events_list3 img{
-    border: var(--cream) 2px solid;
-	-webkit-border-radius: 40px 40px 40px 40px;
+.theme-dark .home_events_list1 img,
+.theme-dark .home_events_list2 img,
+.theme-dark .home_events_list3 img {
+  border: var(--cream) 2px solid;
+  -webkit-border-radius: 40px 40px 40px 40px;
 
-    border-radius: 16px 16px 16px 16px ;
-	
+  border-radius: 16px 16px 16px 16px;
 }
 
-
-.home_events_list_left{
-    display: flex;
-    flex-direction: row;
-    position: relative;
+.home_events_list_left {
+  display: flex;
+  flex-direction: row;
+  position: relative;
 }
 
-.home_events_list_right{
-    display: flex;
-    flex-direction: row;
-    position: relative;
+.home_events_list_right {
+  display: flex;
+  flex-direction: row;
+  position: relative;
 }
 
-.home_events_cloud_left{
-    position: absolute;
-    left: -60%;
+.home_events_cloud_left {
+  position: absolute;
+  left: -60%;
 }
 
-.home_events_cloud_right{
-    position: absolute;
-    right:-70%
+.home_events_cloud_right {
+  position: absolute;
+  right: -70%;
 }
 
 @media (max-width: 740px) {
-	.home_events h1{
-		font-size: 76px;
-		
-	}
-	
-	.home_events_cloud_left{
-		display: none;
-	} 
-
-	.home_events_cloud_right{
-		display: none;
-	} 
-
-	.home_events_list{
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-	}
-
-	.home_events_list1,.home_events_list2,.home_events_list3{
-		padding-bottom: 10%;
-	}
+  .home_events h1 {
+    font-size: 74px;
   }
 
-
-  @media (max-width: 480px) {
-	.home_events h1{
-		font-size: 70px;
-		
-	}
+  .home_events_cloud_left {
+    display: none;
   }
 
-.home_story {
-	height: max(1000px, 100vh);
-	position: relative;
-	transition: all 1s ease;
-} 
+  .home_events_cloud_right {
+    display: none;
+  }
 
+  .home_events_list {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
-.home_story_cloud {
-	position: absolute;
-	top: 0%;
+  .home_events_list1,
+  .home_events_list2,
+  .home_events_list3 {
+    padding-bottom: 10%;
+  }
 }
 
-@media (max-width:480px) {
-	.home_story_cloud{
-		height: 15%;
-	}
+@media (max-width: 480px) {
+  .home_events h1 {
+    font-size: 70px;
+  }
+}
+
+.home_story {
+  height: max(1000px, 100dvh);
+  position: relative;
+  transition: all 1s ease;
+}
+
+.home_story_cloud {
+  position: absolute;
+  top: 0%;
+}
+
+@media (max-width: 480px) {
+  .home_story_cloud {
+    height: 15%;
+  }
 }
 
 .home_story_container {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .home_story_stories {
-	display: flex;
-	justify-content: space-evenly;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .home_story_rod {
-	width: 100%;
-	margin-top: 5%;
+  width: 100%;
+  margin-top: 5%;
 }
 
 .home_story_buttons {
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-	transform: translateY(-100%);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  transform: translateY(-100%);
 }
 
 .home_earth {
-	height: max(100vh, 600px, 100%);
-	padding-bottom: 7%;
+  height: max(100dvh, 600px, 100%);
+  padding-bottom: 7%;
 }
 
 .home_earth > * {
-	z-index: 3;
+  z-index: 3;
 }
 
 #home_earth_clouds {
-	position: absolute;
-	top: 0%;
-	transition: all 0.5s ease;
-	background-color: none;
-	margin: 0%;
-	width: 100%;
+  position: absolute;
+  top: 0%;
+  transition: all 0.5s ease;
+  background-color: none;
+  margin: 0%;
+  width: 100%;
 }
 
 .home_earth_container {
-	margin: 0% 25% 0%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	gap: 30px
+  margin: 0% 25% 0%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
 }
 
-.home_earth_container_header >  h1 {
-	font-size: clamp(2em, 15vw, 85px);
-	text-align: center;
-	line-height: 100%;
+.home_earth_container_header > h1 {
+  font-size: clamp(2em, 15vw, 85px);
+  text-align: center;
+  line-height: 100%;
 }
 
 .home_earth_buttons_container {
-	display: flex;
-	gap: 10px;
+  display: flex;
+  gap: 10px;
 }
 
 .home_earth_container > p {
-	font-size: 21px;
-	text-align: center;
+  font-size: 21px;
+  text-align: center;
 }
 
-@media (max-width:480px) {
-	.home_earth_buttons_container{
-		width: 100%;
-		flex-direction: column;
-	}
+@media (max-width: 480px) {
+  .home_earth_buttons_container {
+    width: 100%;
+    flex-direction: column;
+  }
 
-	.home_earth_buttons_container >  .FilledButton > button {
-		width: 100%;
-	}
+  .home_earth_buttons_container > .FilledButton > button {
+    width: 100%;
+  }
 }
 
 @media (max-width: 720px) {
-	#home_earth_clouds {
-		height: 30vh;
-	}
+  #home_earth_clouds {
+    height: 30dvh;
+  }
 }
-
