--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -6,8 +6,8 @@
 
 #navbar-joinus {
 	padding: 10px 20px;
-	font-size: min(90% ,20px);
-    font-weight: 400;
+	font-size: min(90%, 20px);
+	font-weight: 400;
 }
 
 .navBar {
@@ -19,41 +19,41 @@
 	width: 100vw;
 	justify-content: space-between;
 	align-items: center;
-} 	
+}
 
 .navBar > .navLinks {
-    list-style: none;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 40px;
+	list-style: none;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	gap: 40px;
 	padding-right: 20px;
 }
 
 .navBar > .navLinks li > a {
-    text-decoration: none;
+	text-decoration: none;
 	color: var(--light-sky);
 }
 
 .menu * {
-    display: block !important;
+	display: block !important;
 }
 
 .menu {
-    position: fixed;
-    right: 0;
-    z-index: 10;
-    display: flex;
-    flex-direction: column;
-    justify-content: center !important;
-    z-index: 999;
-    width: 200px;
-    min-height: 100vh;
+	position: fixed;
+	right: 0;
+	z-index: 10;
+	display: flex;
+	flex-direction: column;
+	justify-content: center !important;
+	z-index: 999;
+	width: 200px;
+	min-height: 100vh;
 	background-color: var(--eerie-black);
-    padding: 0 0px;
-    border-left: 30px solid var(--lego-yellow);
-    animation: openNav 0.2s;
-    top: 0;
+	padding: 0 0px;
+	border-left: 30px solid var(--lego-yellow);
+	animation: openNav 0.2s;
+	top: 0;
 }
 
 .navLinks {
@@ -65,10 +65,12 @@
 }
 
 .navLinks * {
-    display: none;
+	display: none;
 }
 
-.navBar_logoContainer, .navBar_toggleContainer, .hamburger_container {
+.navBar_logoContainer,
+.navBar_toggleContainer,
+.hamburger_container {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -83,31 +85,29 @@
 	justify-content: flex-end;
 }
 
-
-
 .navLinks {
 	min-width: max-content;
 }
 
 .navLinks li {
-    position: relative;
+	position: relative;
 }
 
 .navLinks li > a:hover {
-    color: var(--cream) !important;
-} 
+	color: var(--cream) !important;
+}
 
 .navLinks li:hover {
-    color: var(--cream) !important;
-} 
+	color: var(--cream) !important;
+}
 
 .navBar > .navLinks li {
-    cursor: pointer;
-    font-weight: 400;
-    font-size: min(90% ,20px);;
-    line-height: 36px;
-    /* identical to box height */
-    color: #FFFFFF;
+	cursor: pointer;
+	font-weight: 400;
+	font-size: min(90%, 20px);
+	line-height: 36px;
+	/* identical to box height */
+	color: #ffffff;
 }
 
 .hamburger_container {
@@ -115,16 +115,16 @@
 }
 
 .hamburgerMenu {
-    width: 32px;
+	width: 32px;
 }
 
 @keyframes openNav {
-    0% {
-        right: -200px;
-    }
-    100% {
-        right: 0;
-    }
+	0% {
+		right: -200px;
+	}
+	100% {
+		right: 0;
+	}
 }
 
 @media screen and (min-width: 1024px) {
@@ -143,17 +143,17 @@
 	.navBar > .navLinks {
 		display: flex !important;
 	}
-    .navLinks * {
-        display: block;
-    }
+	.navLinks * {
+		display: block;
+	}
 
 	.hamburger_container {
 		display: none;
 	}
 
-    .hamburgerMenu {
-        display: none;
-    }
+	.hamburgerMenu {
+		display: none;
+	}
 }
 
 @media screen and (max-width: 480px) {
@@ -240,35 +240,33 @@
 	position: absolute;
 	left: 50%;
 	transform: translateX(-50%);
-	top: 35px;
+	top: 0px;
 	z-index: -1;
 }
 
-.team .navBar_SunMoon{
+.team .navBar_SunMoon {
 	display: none;
 }
 
-.creator .navBar_SunMoon{
+.creator .navBar_SunMoon {
 	display: none;
 }
 
 .backgroundOverlay {
-    position: fixed;
-    display: block;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100vw;
-    height: 100vh;
-    /* background-color: var(--blasphemous-black); */
-    z-index: 996;
+	position: fixed;
+	display: block;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100vw;
+	height: 100vh;
+	/* background-color: var(--blasphemous-black); */
+	z-index: 996;
 }
 
 .backgroundOverlayClosed {
-    display: none;
-    width: 0%;
-    height: 0%;
+	display: none;
+	width: 0%;
+	height: 0%;
 }
-
-
