--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -3,20 +3,20 @@
 	overflow: hidden;
 }
 
-.home_footer_one{
+.home_footer_one {
 	display: flex;
 	flex-direction: row;
 	background-color: #FFF8E1;
-	padding:2% 4% ;
+	padding: 2% 4%;
 	align-items: center;
-    justify-content: space-between;
+	justify-content: space-between;
 }
 
-.home_footer_one > img {
+.home_footer_one>img {
 	transform: translateX(-24%);
 }
 
-.home_footer_links{
+.home_footer_links {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -25,7 +25,7 @@
 }
 
 
-.home_footer_links > a{
+.home_footer_links>a {
 	display: grid;
 	place-items: center;
 	color: var(--eerie-black);
@@ -37,41 +37,45 @@
 	transition: all 0.2s ease-in-out;
 }
 
-.home_footer_links > a:hover {
+.home_footer_links>a:hover {
 	background-color: var(--eerie-black);
 	color: var(--cream);
 }
 
-.home_footer_links > .FilledButton {
+.home_footer_links>.FilledButton {
 	margin-left: 20px;
 }
 
-.home_footer_two{
+.home_footer_two {
 	background-color: var(--eerie-black);
-    color:white;
-     padding: 4%;
+	color: white;
+	padding: 4%;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 	overflow: hidden;
 }
 
-.home_footer_two_left div{
-    font-size: 15px;
-}
-
-.home_footer_two_right{
-    display: flex;
-    flex-direction: row;
-    line-height: 33px;
-}
-
-.home_footer_two_right div p{
+.home_footer_two_left div {
 	font-size: 15px;
 }
 
+.home_footer_two_right {
+	display: flex;
+	flex-direction: row;
+	line-height: 33px;
+}
 
-.home_footer_img{
+.home_footer_two_right div p {
+	font-size: 15px;
+}
+
+.home_footer_two_right div a {
+	color: azure;
+}
+
+
+.home_footer_img {
 	opacity: 10%;
 	position: absolute;
 	width: 100%;
@@ -84,11 +88,11 @@
 	width: 100%;
 }
 
-.home_footer_image{
+.home_footer_image {
 	background-color: var(--eerie-black);
 }
 
-.home_footer_img > img {
+.home_footer_img>img {
 	width: 100%;
 	height: 100%;
 }
@@ -115,7 +119,7 @@
 }
 
 @media (max-width: 480px) {
-	.home_footer_links > .FilledButton {
+	.home_footer_links>.FilledButton {
 		display: none;
 	}
 }
